--- a/app/src/main/res/layout/layout_about.xml
+++ b/app/src/main/res/layout/layout_about.xml
@@ -34,18 +34,20 @@
         android:textSize="18dp"
         android:text="This app is Developed by Kamal Kishor Meena"/>
 
-     <Button
-         android:id="@+id/dissmiss"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="DISSMISS"
-         android:textSize="15dp"
-         android:textColor="@color/mainColor"
-         android:layout_gravity="right"
-         android:layout_marginTop="32dp"
-         style="@style/Widget.AppCompat.Button.Borderless"
-         />
     </LinearLayout>
+
+       <Button
+        android:id="@+id/dissmiss"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="DISSMISS"
+        android:textSize="15dp"
+        android:textColor="@color/colorPrimary"
+        android:layout_marginTop="32dp"
+        android:background="@color/mainColor"
+        android:layout_gravity="bottom"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        />
 
 </android.support.v7.widget.CardView>
 
