--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,12 +4,14 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:navigationBarColor">#FFFCFCFC</item>
+        <item name="android:navigationBarColor">#FFFFFF</item>
         <item name="android:windowLightNavigationBar">true</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:statusBarColor">@color/colorPrimary</item>
     </style>
 
     <style name="recorder" parent="Theme.AppCompat">
-        <item name="colorPrimaryDark">@color/recorderbg</item>
+        <item name="colorPrimaryDark">@color/recorderBg</item>
         <item name="android:navigationBarColor">#FF0D7AF1</item>
 
     </style>
